# rules_openapi

./: .gitignore  BUILD.bazel  Cargo.toml  README.md
examples/smoke/: BUILD.bazel  client_test.rs
openapi/: BUILD.bazel  contract_test.bzl  plugin_contract.md  providers.bzl  toolchains.bzl
openapi/private/: BUILD.bazel  extensions.bzl
rust/: BUILD.bazel  defs.bzl
tools/contract_test/: BUILD.bazel  Cargo.toml
tools/contract_test/src/: main.rs
tools/openapi_to_rust_client/: BUILD.bazel  Cargo.toml
tools/openapi_to_rust_client/src/: main.rs
